# anna

./: .gitignore  CMakeLists.txt  activator.h  ann2.cc  ann2.h  common.h  generator.h  init2.cc  init3.cc  init4.cc  init5.cc  init6.cc
tests/: test1.cc  test3.cc  test4.cc  test5.cc
